--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,14 +19,12 @@ management:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://partha:password123@localhost:8761/eureka/
 
 api:
   login:
     url:
       path: /users-webservice/users/login
-
-
 
   registration:
     url:
@@ -59,5 +57,8 @@ token:
 
 ribbon:
   ReadTimeout: 600000
+
+zuul:
+  sensitiveHeaders: Cookie,Set-Cookie
 
 
